# zrx

./: .gitignore  Cargo.toml
.github/workflows/: build.yml  check.yml  commit.yml  release.yml
crates/zrx/: Cargo.toml
crates/zrx-diagnostic/: Cargo.toml
crates/zrx-diagnostic/src/: diagnostic.rs  lib.rs
crates/zrx-diagnostic/src/diagnostic/: convert.rs  location.rs  macros.rs  report.rs  severity.rs  tag.rs
crates/zrx-diagnostic/src/diagnostic/location/: macros.rs  position.rs  range.rs
crates/zrx-diagnostic/src/diagnostic/report/: convert.rs  ext.rs
crates/zrx-executor/: Cargo.toml
crates/zrx-executor/src/: executor.rs  lib.rs
crates/zrx-executor/src/executor/: error.rs  signal.rs  strategy.rs  task.rs
crates/zrx-executor/src/executor/strategy/: immediate.rs  worker.rs
crates/zrx-executor/src/executor/task/: collection.rs
crates/zrx-graph/: Cargo.toml
crates/zrx-graph/src/: graph.rs  lib.rs
crates/zrx-graph/src/graph/: builder.rs  error.rs  macros.rs  operator.rs  property.rs  topology.rs  traversal.rs  visitor.rs
crates/zrx-graph/src/graph/operator/: map.rs
crates/zrx-graph/src/graph/topology/: adjacency.rs  distance.rs
crates/zrx-graph/src/graph/traversal/: into_iter.rs  iter.rs
crates/zrx-graph/src/graph/visitor/: ancestors.rs  common_ancestors.rs  common_descendants.rs  descendants.rs  filter_sinks.rs  filter_sources.rs  paths.rs  sinks.rs  sources.rs
crates/zrx-id/: Cargo.toml
crates/zrx-id/src/: id.rs  lib.rs
crates/zrx-id/src/id/: builder.rs  convert.rs  error.rs  filter.rs  format.rs  macros.rs  matcher.rs  uri.rs
crates/zrx-id/src/id/filter/: builder.rs  candidates.rs  condition.rs  error.rs  (+3 more)
crates/zrx-path/: Cargo.toml
crates/zrx-path/src/: lib.rs  path.rs
crates/zrx-path/src/path/: ext.rs  transform.rs
crates/zrx-scheduler/: Cargo.toml
crates/zrx-scheduler/src/: lib.rs  scheduler.rs
crates/zrx-scheduler/src/scheduler/: action.rs  effect.rs  executor.rs  graph.rs  id.rs  session.rs  tick.rs  value.rs
crates/zrx-store/: Cargo.toml
crates/zrx-store/src/: lib.rs  queue.rs  store.rs
crates/zrx-store/src/queue/: item.rs  iter.rs
crates/zrx-store/src/store/: adapter.rs  behavior.rs  collection.rs  comparator.rs  compare.rs  decorator.rs  key.rs  order.rs  util.rs
crates/zrx-stream/: Cargo.toml
crates/zrx-stream/src/: lib.rs  stream.rs
crates/zrx-stream/src/stream/: barrier.rs  combinator.rs  function.rs  operator.rs  value.rs  workspace.rs
crates/zrx/src/: lib.rs
(+161 files in other folders)
