# Copyright (c) 2025-2026 Zensical and contributors

# SPDX-License-Identifier: MIT
# All contributions are certified under the DCO

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.86"
homepage = "https://github.com/zensical/zrx"
repository = "https://github.com/zensical/zrx"
authors = ["Zensical <contributors@zensical.org>"]
license = "MIT"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
zrx-diagnostic = { version = "0.0.1", path = "crates/zrx-diagnostic" }
zrx-event = { version = "0.0.1", path = "crates/zrx-event" }
zrx-executor = { version = "0.0.1", path = "crates/zrx-executor" }
zrx-graph = { version = "0.0.3", path = "crates/zrx-graph" }
zrx-id = { version = "0.0.3", path = "crates/zrx-id" }
zrx-path = { version = "0.0.1", path = "crates/zrx-path" }
zrx-scheduler = { version = "0.0.3", path = "crates/zrx-scheduler" }
zrx-store = { version = "0.0.1", path = "crates/zrx-store" }
zrx-stream = { version = "0.0.3", path = "crates/zrx-stream" }

ahash = "0.8.12"
crossbeam = "0.8.4"
file-id = "0.2.3"
globset = "0.4.18"
litemap = "0.8.1"
notify = "8.2.0"
percent-encoding = "2.3.2"
slab = "0.4.11"
thiserror = "2.0.17"
tracing = "0.1.41"
walkdir = "2.5.0"
